Update branding and main heading: remove Lovable references and improve social media preview

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>philo-palette</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Philo Palette - Discover Your Philosophical Path</title>
+    <meta name="description" content="Discover philosophical works that resonate with your personality and address your unique questions about life, meaning, and personal growth." />
+    <meta name="author" content="Philo Palette" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
